# msw-flir-bonsai

./: .copier-answers.yml  .pre-commit-config.yaml  404.html  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml  docs.yml  release.yml
api/: index.html
concepts/: index.html
docs/: api.md  concepts.md  getting_started.md  index.md  usage.md
docs/usage/: cli.md  python.md  workflows.md
getting_started/: index.html
search/: search_index.json
src/msw_flir_bonsai/: __init__.py  alignment.py  cli.py  runner.py  timestamps.py
src/msw_flir_bonsai/bonsai_workflows/: __init__.py  run-flir-flycap-1cam.bonsai  run-flir-flycap-2cam.bonsai  run-flir-spinnaker-1cam.bonsai  run-flir-spinnaker-2cam.bonsai
src/msw_flir_bonsai/readers/: __init__.py  session.py
tests/: test_timestamps.py
tests/integration/: test_placeholder.py  test_runner_live.py
tests/unit/: test_alignment.py  test_cli.py  test_placeholder.py  test_readers.py  test_runner.py
usage/: index.html
usage/cli/: index.html
usage/python/: index.html
usage/workflows/: index.html
