[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "msw_flir_bonsai"
dynamic = ["version"]
description = "FLIR camera control via Bonsai for murine shift work experiments"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    { name = "Lars B. Rollik", email = "L.B.Rollik@protonmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "typer",
]

[project.scripts]
msw-flir = "msw_flir_bonsai.cli:main"

[project.entry-points."msw.cli"]
flir = "msw_flir_bonsai.cli:app"

[project.urls]
Homepage = "https://github.com/larsrollik/msw-flir-bonsai"
Documentation = "https://larsrollik.github.io/msw-flir-bonsai/"
"Issue Tracker" = "https://github.com/larsrollik/msw-flir-bonsai/issues"

# ---------------------------------------------------------------------------
# Build
# ---------------------------------------------------------------------------

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/msw_flir_bonsai/_version.py"

[tool.hatch.build]
artifacts = ["src/msw_flir_bonsai/bonsai_workflows/*.bonsai"]

[tool.hatch.build.targets.wheel]
packages = ["src/msw_flir_bonsai"]

[tool.hatch.build.targets.sdist]
include = ["/src/msw_flir_bonsai", "/tests", "/README.md", "/LICENSE", "/pyproject.toml", "/VERSION", "/CITATION.cff"]

# ---------------------------------------------------------------------------
# Dependencies
# ---------------------------------------------------------------------------

[project.optional-dependencies]
dev = [
    "commitizen",
    "pytest>=8",
    "pytest-cov",
    "pre-commit",
    "mypy",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]

# ---------------------------------------------------------------------------
# Commitizen
# ---------------------------------------------------------------------------

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "commitizen"
version = "0.1.0"
version_files = ["VERSION"]
tag_format = "v$version"
update_changelog_on_bump = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/msw_flir_bonsai --cov-report=term-missing --maxfail=5"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "SIM",      # flake8-simplify
    "PTH",      # flake8-pathlib
    "TCH",      # flake8-type-checking
    "PYI",      # flake8-pyi
    "YTT",      # flake8-2020
    "N",        # pep8-naming
]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"src/msw_flir_bonsai/cli.py" = ["B008"]   # Typer uses function calls in defaults by design

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
